# sidekick-screensaver-pi5-wayland-bookworm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  Sidekick_Installer.sh  Sidekick_Installer_v4.sh  Sidekick_Installer_v4_new.sh  close_all_guis.sh  create_github_repo.sh  launch_gui.sh  mystify_widget.py  pyproject.toml  pyrightconfig.json  requirements.txt  restore_background.sh  restore_taskbar_quiet.sh  screensaver-show-window  screensaver_preferences.py  screensaver_preferences_qt6.py  sidekick_screensaver.sh  sidekick_widget.py  slideshow_widget.py  test_systray.py  test_update_check.py  wayland_sidekick_autolock.sh
.github/: FUNDING.yml
docs/: AUTOMATIC_UPDATE_CHECK_SYSTEM.md  CONTRIBUTING.md  DEV_VS_PROD_FOLDERS.md  SECURITY.md  SETTINGS_PERSISTENCE.md  TOUCHSCREEN_UI_OPTIMIZATION.md  V4_MIGRATION_GUIDE.md
legacy/: GUI_BUTTON_CLEANUP_SUMMARY.md  screensaver_preferences_qt6.py  test_hdmi_power.sh  wayland_sidekick_autolock.sh
media/Logo/: guide llm system
scripts/: launch_gui_v4.sh  restore_desktop.sh  sidekick_screensaver.sh  verify_installation.sh
src/: generate_matrix_video_opencv.py  mystify_widget.py  screensaver_preferences_v4.py  sidekick_widget.py  slideshow_widget.py  video_widget.py
