[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sidekick-screensaver"
description = "A modern, feature-rich screensaver system for Linux with PyQt6 GUI"
authors = [
    {name = "Sidekick Screensaver Contributors", email = "maintainer@example.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment :: Screen Savers",
    "Topic :: System :: Systems Administration",
    "Environment :: X11 Applications :: Qt",
]
keywords = ["screensaver", "linux", "pyqt6", "matrix", "desktop", "power-management"]
dependencies = [
    "PyQt6>=6.0.0",
    "psutil>=5.8.0",
    "qdarkstyle>=3.0.0",
    "qdarktheme>=2.0.0",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/yourusername/sidekick-screensaver"
"Bug Reports" = "https://github.com/yourusername/sidekick-screensaver/issues"
"Source" = "https://github.com/yourusername/sidekick-screensaver"
"Documentation" = "https://github.com/yourusername/sidekick-screensaver/wiki"

[project.scripts]
screensaver-prefs-qt6 = "sidekick_screensaver.preferences:main"

[project.gui-scripts]
sidekick-screensaver = "sidekick_screensaver.preferences:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-qt>=4.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
    "bandit>=1.7",
    "safety>=2.0",
]

[tool.setuptools]
packages = ["sidekick_screensaver"]

[tool.setuptools.dynamic]
version = {attr = "sidekick_screensaver.__version__"}

[tool.setuptools.package-data]
sidekick_screensaver = ["*.json", "*.md", "*.sh"]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --tb=short"
testpaths = [
    "tests",
]
qt_api = "pyqt6"
